[project]
name = "foundation-models-cdc"
version = "0.1.0"
requires-python = ">=3.12, <3.13"
dependencies = [
    "chronos>=0.3",
    "chronos-forecasting>=2.0.1",
    "dacite>=1.9.2",
    "hydra-core>=1.3.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "lightgbm>=4.6.0",
    "matplotlib==3.9.2",
    "ninja>=1.11.1.4",
    "numpy>=1.26.4",
    "omegaconf>=2.3.0",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "peft>=0.17.0",
    "pip>=25.1.1",
    "plotly>=6.1.2",
    "pmdarima>=2.0.4",
    "polars>=1.31.0",
    "pyarrow>=20.0.0",
    "rotary-embedding-torch==0.8.6",
    "seaborn>=0.13.2",
    "statsforecast>=2.0.3",
    "statsmodels>=0.14.5",
    "tensorboard>=2.19.0",
    "torch>=2.4.1",
    "tsicl>=0.2.0",
    "xformers>=0.0.28.post1",
    "xgboost>=3.0.4",
]

[dependency-groups]
dev = [
    "pyhive>=0.7.0",
    "thrift>=0.22.0",
    "thrift-sasl>=0.4.3",
    "oracledb>=3.1.1",
    "sqlalchemy>=2.0.41",
    "requests==2.27.1",
    "ipykernel>=7.3.0",
]


[tool.uv.workspace]
members = [
    "new_models",
]
